@@ -1,16 +1,16 @@
 package org.springframework.samples.petclinic.player;
 
 import static org.junit.Assert.assertEquals;
-<<<<<<< HEAD
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
-=======
->>>>>>> dangalmar
 
 import java.time.LocalDate;
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
@@ -20,6 +20,7 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.samples.petclinic.game.Game;
 import org.springframework.samples.petclinic.user.User;
 import org.springframework.samples.petclinic.user.UserService;
 import org.springframework.stereotype.Service;
@@ -34,6 +35,7 @@ public class PlayerServiceTest {
 	@Autowired
 	private UserService userService;
 	
+	private int playerId = 1;
 	
 	@Test
 	public void testsavePlayer() {
@@ -56,7 +58,6 @@ public class PlayerServiceTest {
 			assertEquals(playerSave.getRegisterDate(), LocalDate.now());
 			assertEquals(playerSave.getModificationDate(), LocalDate.now());
 	}
-<<<<<<< HEAD
 	
 	@Test
 	public void testFindPlayerByUsername() throws Exception {
@@ -69,14 +70,14 @@ public class PlayerServiceTest {
 	@Test
 	void shouldFindPlayerWithGames() {
 		try {
-			Player player = this.playerService.showPlayersById(playerId);
-			Collection<Game> game = player.getPlayedGames();
-			List<Game> listaGame = game.stream().toList();
-			assertNotNull(game);
-			assertThat(game.size()).isEqualTo(3);
-			assertThat(listaGame.get(0).getGameCode()).isEqualTo(10);
-			assertThat(listaGame.get(1).getGameCode()).isEqualTo(12);
-			assertThat(listaGame.get(2).getGameCode()).isEqualTo(14);
+			Player player = this.playerService.showPlayerById(playerId);
+			Collection<Game> games = player.getPlayedGames();
+			List<Game> listaGame = games.stream().collect(Collectors.toList());
+			assertNotNull(games);
+			assertEquals(16, games.size());
+			assertEquals(listaGame.get(0).getGameCode(), Integer.valueOf(10));
+			assertEquals(listaGame.get(1).getGameCode(), Integer.valueOf(12));
+			assertEquals(listaGame.get(2).getGameCode(), Integer.valueOf(14));
 		}catch (Exception e) {
 			fail();
 		}
@@ -89,6 +90,4 @@ public class PlayerServiceTest {
 //		assertNotNull(game);
 //		assertThat(game.size()).isEqualTo(3);
 //	}
-=======
->>>>>>> dangalmar
 }
